# Kavach

./: README.md  app1.jfif  app2.jfif
app/: README.md
components/bsp/: CMakeLists.txt  idf_component.yml
docs/: great_projects.md
docs/hardware_overview/esp32_s3_box_3/: disassembly_tutorial_3.md
docs/images/: README.md  app3.jfif  app4.jfif
examples/kavach_demo/: README.md  sdkconfig.defaults
examples/kavach_demo/images/: esp32box3.jfif
examples/kavach_demo/main/: CMakeLists.txt  Kconfig.projbuild  main.c
examples/kavach_demo/main/app/: app_ir.c  app_ir.h  app_mqtt.c  app_mqtt.h  app_sntp.c  app_sr_handler.c  app_sr_handler.h  app_wifi_simple.c  mute_stub.c  mute_stub.h  sensor_stub.c  sensor_stub.h
examples/kavach_demo/main/gui/: ui_kavach.c  ui_kavach.h
examples/kavach_demo/spiffs/: README.txt
kavach/: CMakeLists.txt  PROJECT_STRUCTURE.md  README.md  VOICE_CONFIRMATIONS.md  mosquitto.conf  sdkconfig  sdkconfig.defaults  sdkconfig.old
kavach/images/: esp32_iot_kit.jfif
kavach/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
kavach/main/app/: app_led.c  app_mqtt.c  app_mqtt.h  app_rmaker_stub.c  app_rmaker_stub.h  app_sr.c  app_sr.h  app_sr_handler.c  app_wifi.c  app_wifi.h  app_wifi_simple.h  app_wifi_simple_compat.c
kavach/main/gui/: ui_kavach.c  ui_kavach.h  ui_main.c  ui_net_config.c
mqtt_nodes/: README.md
mqtt_nodes/gas_sensor_node/: README.md  gas_sensor_node.ino  platformio.ini
mqtt_nodes/gas_sensor_node/src/: main.cpp
mqtt_nodes/pir_sensor_node/: README.md  pir_sensor_node.ino  platformio.ini
mqtt_nodes/pir_sensor_node/src/: main.cpp
mqtt_nodes/relay_control_node/: README.md  platformio.ini  relay_control_node.ino
mqtt_nodes/relay_control_node/src/: main.cpp
